--- a/css/styles.css
+++ b/css/styles.css
@@ -335,6 +335,24 @@
     border-radius: var(--border-radius);
     box-shadow: var(--shadow);
   }
+
+  .image-containerx::before {
+    content: "";
+    position: absolute;
+    top: -16px;
+    width: 100%;
+    height: 80%;
+    background-color: var(--dark-blue);
+    border-radius: var(--border-radius);
+    z-index: 1;
+  }
+
+  .image-containerx img {
+    position: absolute;
+    z-index: 2;
+    border-radius: var(--border-radius);
+    box-shadow: var(--shadow);
+  }
   
   /* Page Hero */
   .page-hero {
@@ -830,8 +848,8 @@
   }
   
   .logo-showcase img {
-    height: 128px;
-    width: auto;
+    height: 80%;
+    width: 100%;
   }
   
   /* Color Palette Section */
@@ -995,6 +1013,7 @@
   .program-card {
     background-color: var(--white);
     padding: 1.5rem;
+    color: #1a4050;
     border-radius: var(--border-radius);
     box-shadow: var(--shadow);
     text-align: center;
